--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -341,7 +341,7 @@ a:active - a link the moment it is clicked*/
 	color: #fff;
 }
 
-.toggles button {
+#resume button {
 	font-family: "Abril Fatface";
 	background-color: #fff;
 	color: #000;
@@ -364,7 +364,7 @@ a:active - a link the moment it is clicked*/
 	cursor: pointer;
 }
 
-.toggles button:before {
+#resume button:before {
 	filter: progid:DXImageTransform .Microsoft .Alpha(Opacity=0);
 	opacity: 0;
 	background: #f91791;
@@ -389,11 +389,11 @@ a:active - a link the moment it is clicked*/
 	z-index: -1;
 }
 
-.toggles button:hover {
+#resume button:hover {
 	color: #fff;
 }
 
-.toggles button:hover:before {
+#resume button:hover:before {
 	filter: progid:DXImageTransform .Microsoft .Alpha(Opacity=10000);
 	opacity: 100;
 	-moz-transform: rotate3d(0, 0, 1, 0deg) translate3d(0, 0em, 0);
@@ -1007,7 +1007,7 @@ body > section > .holder > .title h2:after {
 }
 
 #about .links {
-	margin: 75px 0 0 0;
+	margin: 20px 0 0 0;
 }
 
 #about .links a + a {
@@ -1110,16 +1110,18 @@ body > section > .holder > .title h2:after {
 	content: "\e60b";
 	font-size: 100px;
 	text-align: center;
+
 }
 .devicon-heroku-line:hover,
 .devicon-heroku-plain:hover,
 .devicon-heroku-original:hover {
-	color: #6762a6;
+	background: #6762a6;
 	font-size: 100px;
 	text-align: center;
 }
 
 .devicon-heroku-plain:before {
+	background: #6762a6;
 	color: #fff;
 	content: "\e60f";
 	font-size: 100px;
@@ -1212,8 +1214,6 @@ body > section > .holder > .title h2:after {
 	text-align: center;
 }
 
-
-
 .devicon-jquery-plain:before {
 	color: #fff;
 	content: "\e84a";
@@ -1276,8 +1276,7 @@ body > section > .holder > .title h2:after {
 .devicon-photoshop-plain:before {
 	color: #fff;
 	content: "\eb6d";
-	font-size: 100px;
-	text-align: center;
+
 }
 .devicon-photoshop-line:hover,
 .devicon-photoshop-plain:hover{
@@ -1289,13 +1288,25 @@ body > section > .holder > .title h2:after {
 .devicon-postgresql-plain:before {
 	color: #fff;
 	content: "\eb7d";
+	font-size: 100px;
+	text-align: center;
 }
 .devicon-postgresql-plain:hover{
 	color: #336791;
+	font-size: 100px;
+	text-align: center;
 }
 
+.devicon-php-plain:before {
+	color: #fff;
+	font-size: 100px;
+	text-align: center;
+
+}
 .devicon-php-plain:hover {
 	color: #6181b6;
+	font-size: 100px;
+	text-align: center;
 }
 .devicon-python-plain:before {
 	color: #fff;
@@ -1309,16 +1320,22 @@ body > section > .holder > .title h2:after {
 .devicon-rails-plain:before {
 	color: #fff;
 	content: "\eba3";
+	font-size: 100px;
+	text-align: center;
 }
 
 .devicon-rails-plain:hover {
 	color: #a62c46;
+	font-size: 100px;
+	text-align: center;
 }
 
 
 .devicon-ruby-plain:before {
 	color: #fff;
 	content: "\ebca";
+	font-size: 100px;
+	text-align: center;
 }
 
 .devicon-ruby-plain:hover {
@@ -1329,6 +1346,8 @@ body > section > .holder > .title h2:after {
 .devicon-sass-plain:before {
 	color: #fff;
 	content: "\ebcb";
+	font-size: 100px;
+	text-align: center;
 }
 .devicon-sass-original:hover,
 .devicon-sass-plain:hover{
@@ -1339,6 +1358,8 @@ body > section > .holder > .title h2:after {
 .devicon-wordpress-plain:before {
 	color: #fff;
 	content: "\ebfe";
+	font-size: 100px;
+	text-align: center;
 }
 .devicon-wordpress-plain:hover {
 	color: #494949;
@@ -1374,22 +1395,24 @@ body > section > .holder > .title h2:after {
 }
 .bitIcon-css:before {
 	content: "\e607";
+	color: #fff;
+	font-size: 100px;
+	text-align: center;
 }
 .bitIcon-html-sq:before {
 	content: "\e60c";
 }
-.bitIcon-html:before {
-	color: #fff;
-	content: "\e60d";
-}
+
 .bitIcon-html:before {
 	content: "\e60d";
 	font-size: 100px;
 	text-align: center;
+	background: #8942d6;
+	color: #fff;
 }
 .bitIcon-html:hover{
-	color: #fff;
-
+	color: #8942d6;
+	background: #8942d6;
 }
 #about .skills a i {
 	font-size: 24px;
@@ -1411,33 +1434,46 @@ body > section > .holder > .title h2:after {
 
 .angular {
 	background: #c4473a;
+	font-size: 100px;
+	text-align: center;
 }
 
 .github{
 	background: #181616;
+	font-size: 100px;
+	text-align: center;
 }
 
 .atom {
 	background: #67595D;
+	font-size: 100px;
+	text-align: center;
 }
 
 .git {
 	background: #f34f29;
+	font-size: 100px;
+	text-align: center;
 }
 .html5 {
 	background: #e54d26;
+	font-size: 100px;
+	text-align: center;
 }
 .html {
 	background: #8942d6;
+	font-size: 100px;
+	text-align: center;
 }
 .css {
 	background: aqua;
+	font-size: 100px;
+	text-align: center;
 }
 
-}
+
 .heroku {
-	background: #6762a6;
-	font-size: 100px;
+	background-color: #6762a6;
 }
 .illustrator {
 	background: #faa625;
@@ -1445,6 +1481,16 @@ body > section > .holder > .title h2:after {
 	text-align: center;
 }
 
+.php {
+	background-color: #6181b6;
+	font-size: 100px;
+	text-align: center;
+}
+.wordpress{
+	background-color: #494949;
+	font-size: 100px;
+	text-align: center;
+}
 .javascript {
 	background: #f0db4f;
 	font-size: 100px;
@@ -1505,8 +1551,33 @@ body > section > .holder > .title h2:after {
 	font-size: 100px;
 	text-align: center;
 }
-circle skills
 
+circle skills
+.ch-grid {
+	margin: 20px 0 0 0;
+	padding: 0;
+	list-style: none;
+	display: block;
+	text-align: center;
+	width: 100%;
+}
+
+.ch-grid:after,
+.ch-item:before {
+	content: '';
+    display: table;
+}
+
+.ch-grid:after {
+	clear: both;
+}
+
+.ch-grid li {
+	width: 220px;
+	height: 220px;
+	display: inline-block;
+	margin: 20px;
+}
 .ch-item {
 	width: 100%;
 	height: 100%;
@@ -1533,13 +1604,38 @@ circle skills
 	transition: all 0.4s ease-in-out;
 	top: 20px;
 	left: 20px;
+	/*background: #f9f9f9 url(../images/1167.png);*/
 	box-shadow:
 	0 0 0 20px rgba(255,255,255,0.2),
 	inset 0 0 3px rgba(115,114, 23, 0.8);
 
 }
 
+
 .ch-info{
+	position: absolute;
+	width: 180px;
+	height: 180px;
+	border-radius: 50%;
+	transition: all 0.4s ease-in-out;
+	transform-style: preserve-3d;
+}
+
+.ch-info > div {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-position: center center;
+	backface-visibility: hidden;
+}
+
+.ch-info .ch-info-back {
+	transform: rotate3d(0,1,0,180deg);
+	background: #000;
+}
+/*.ch-info{
 	position: absolute;
 	width: 180px;
 	height: 180px;
@@ -1557,8 +1653,58 @@ circle skills
 	-ms-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 
+}*/
+
+
+.ch-info h3 {
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size: 14px;
+	margin: 0 15px;
+	padding: 40px 0 0 0;
+	height: 90px;
+	font-family: 'Open Sans', Arial, sans-serif;
+	text-shadow:
+		0 0 1px #fff,
+		0 1px 2px rgba(0,0,0,0.3);
 }
-.ch-img{
+
+.ch-info p {
+	color: #fff;
+	padding: 10px 5px;
+	font-style: italic;
+	margin: 0 30px;
+	font-size: 12px;
+	border-top: 1px solid rgba(255,255,255,0.5);
+}
+
+.ch-info p a {
+	display: block;
+	color: rgba(255,255,255,0.7);
+	font-style: normal;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 9px;
+	letter-spacing: 1px;
+	padding-top: 4px;
+	font-family: 'Open Sans', Arial, sans-serif;
+}
+
+.ch-info p a:hover {
+	color: rgba(255,242,34, 0.8);
+}
+
+.ch-item:hover .ch-info-wrap {
+	box-shadow:
+		0 0 0 0 rgba(255,255,255,0.8),
+		inset 0 0 3px rgba(115,114, 23, 0.8);
+}
+
+.ch-item:hover .ch-info {
+	transform: rotate3d(0,1,0,-180deg);
+}
+/*.ch-img{
 	position: absolute;
 	width: 180px;
 	height: 180px;
@@ -1578,8 +1724,8 @@ circle skills
 	-ms-transform-style: preserve-3d;
 	transform-style: preserve-3d;
 
-}
-.ch-info > div {
+}*/
+/*.ch-info > div {
 	display: block;
 	position: absolute;
 	width: 100%;
@@ -1667,7 +1813,7 @@ circle skills
 	-o-transform: rotate3d(0,1,0,-180deg);
 	-ms-transform: rotate3d(0,1,0,-180deg);
 	transform: rotate3d(0,1,0,-180deg);
-}
+}*/
 
 
 #about .experience .row {
@@ -2263,10 +2409,67 @@ position: relative;
 	-moz-transition: all 0.1s ease-in;
 	-o-transition: all 0.1s ease-in;
 }
-.project_info:hover { opacity: 0.8;}
+.project_info:hover { opacity: 0.9;}
 .project_info span {
 	display: block;
 	font-size: 16px;
+}
+
+
+.project .button{
+	font-family: 'Abril Fatface', serif;
+	background-color: #fff;
+	color: #000;
+	border: 3px solid #000;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	text-decoration: none;
+	height: 45px;
+	line-height: 47px;
+	padding: 0 25px;
+	min-width: 130px;
+	display: inline-block;
+	text-transform: uppercase;
+	position: relative;
+	overflow: hidden;
+	font-size: 18px;
+	text-align: center;
+	cursor: pointer;
+}
+#resume .button:hover {
+	color: #fff;
+}
+
+#resume .links a {
+	margin: 0 0 12px 0 !important;
+	width: 100%;
+	float: left;
+	padding: 0;
+}
+#resume .links {
+	margin: 20px 0 0 0;
+}
+
+#resume .links a + a {
+	margin: 0 0 0 15px;
+}
+
+#resume .links a:hover i {
+	color: #fff;
+}
+
+#resume .links i {
+	color: #000;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
+	filter: progid:DXImageTransform .Microsoft .Alpha(enabled=false);
+	opacity: 1;
+	font-size: 18px;
+	cursor: pointer;
+	margin: 0 8px 0 0;
 }
 
 .gal_btn1{
@@ -2338,6 +2541,11 @@ position: relative;
 	height:30px;
 }
 
+span1:hover{
+	color: yellow;
+	text-shadow: 4px 4px 4px #f91791;
+}
+
 .gal_btn2{
 	font-family: 'Abril Fatface', serif;
 	background-color: #fff;
@@ -2406,6 +2614,10 @@ position: relative;
 	width:30px;
 	height:30px;
 }
+span2:hover{
+	color: yellow;
+	text-shadow: 4px 2px 4px #f91791;
+}
 .gal_btn3{
 	font-family: 'Abril Fatface', serif;
 	background-color: #fff;
@@ -2472,6 +2684,10 @@ position: relative;
 	padding:6px 0px 0px 9px;
 	width:30px;
 	height:30px;
+}
+span3:hover{
+	color: yellow;
+	text-shadow: 2px 2px 4px #f91791;
 }
 .gal_btn4{
 	font-family: 'Abril Fatface', serif;
@@ -2540,6 +2756,10 @@ position: relative;
 	width:30px;
 	height:30px;
 }
+span4:hover{
+	color: yellow;
+	text-shadow: 2px 2px 4px #f91791;
+}
 .gal_btn5{
 	font-family: 'Abril Fatface', serif;
 	background-color: #fff;
@@ -2607,6 +2827,16 @@ position: relative;
 	width:30px;
 	height:30px;
 }
+
+span5:hover{
+	color: yellow;
+	text-shadow: 2px 2px 4px #f91791;
+}
+
+.btn_container{
+	bottom: auto;
+}
+
 #resume {
 	background-color: #fff;
 	padding: 80px 0 210px 0;
@@ -2693,6 +2923,7 @@ position: relative;
 
 #contactMe .contact-info a:hover {
 	text-decoration: underline;
+	font-weight: bolder;
 }
 
 #contactMe .contact-info div {
@@ -2766,8 +2997,8 @@ position: absolute;
 font-size: 18px;
 text-transform: uppercase;
 /* font-family: 'Audrey-Normal'; */
-padding-bottom: 42px;
-}
+/*padding-bottom: 42px;
+}*/
 
 #featured .galleries {
 	display: inline-block;
@@ -2784,7 +3015,7 @@ padding-bottom: 42px;
 
 #featured a + a {
 	margin: 0 0 0 15px;
-	}*/
+	}
 
 	#resume .resume .quote {
 		font-size: 22px;
@@ -2919,7 +3150,7 @@ padding-bottom: 42px;
 		}
 
 		#contactMe .contact-info div {
-			border: 1px solid #FFF;
+			border: 1px solid #fff;
 			margin: 0 auto 12px !important;
 			-moz-border-radius: 3px;
 			-webkit-border-radius: 3px;
@@ -2943,7 +3174,7 @@ padding-bottom: 42px;
 			top: 0;
 			width: 51%;
 			height: 100%;
-			background: #222222;
+			background: #222;
 			z-index: 1000;
 		}
 
