--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -85,13 +85,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 	display: block;
 }
 
-
-h1 {
-	position: relative;
-	text-align: center;
-	font-family:'Abril Fatface', serif;
-}
-
 #skills h4{
 	/*text-align: center;*/
 	margin-top: 50px;
@@ -403,7 +396,7 @@ a:visited{
 	background:  repeat 0 0 fixed, no-repeat center -80px fixed #000;
 	background-size: auto, cover;
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 }
 
 #welcome .background {
@@ -417,6 +410,57 @@ a:visited{
 	padding: 1em;
 	position: relative;
 	text-align: center;
+	z-index: 1;
+}
+
+#welcome .hero {
+  width: 100%;
+	height: 100%;
+  min-height: 1200px;
+}
+
+
+#welcome #mainnav {
+  position: absolute;
+  font-family: 'Abril Fatface', serif;
+  z-index: 99999;
+}
+#welcome #mainnav li {
+  margin: 85px 0;
+  left: -550px;
+  position: relative;
+	z-index: 99999;
+  display: none;
+}
+#welcome #mainnav a {
+  color: #f91791;
+  text-shadow: 2px 2px 0 #fff;
+  text-decoration: none;
+  font-size: 3.5em;
+	z-index: 99999;
+}
+
+#welcome .hamb {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 2.5em;
+  z-index: 99999;
+}
+#welcome .hamb a {
+  color: #f91791;
+  text-decoration: none;
+	z-index: 99999;
+}
+
+#welcome #bubble {
+  width: 100%;
+  height: 100%;
+  opacity: .9;
+  position: fixed;
+  display: none;
+  z-index: -1;
+  background: rgba(0, 0, 0, 0.9);
 }
 /*
 .intro h2 {
@@ -938,7 +982,7 @@ body > section > .holder > .title h2:after {
 	left: 0;
 	background: #fff;
 	position: absolute;
-	z-index: 99;
+	z-index: 10;
 }
 
 #about:after {
@@ -2908,6 +2952,12 @@ span5:hover{
 	color: #f91791;
 	font-size: 17px;
 }
+
+@media screen and (max-width: 1024px) {
+	#resume {
+		height: 580px;
+	}
+
 
 #contactMe {
 	background-color: #f91791;
