--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -85,6 +85,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 	display: block;
 }
 
+
 #skills h4{
 	/*text-align: center;*/
 	margin-top: 50px;
@@ -102,6 +103,152 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 		opacity: 1;
 		left: 0;
 	}
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: #fff;
+}
+
+#menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+
+  z-index: 10;
+
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+
+  cursor: pointer;
+
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+
+  background: #f91791;
+  border-radius: 3px;
+
+  z-index: 3;
+
+  transform-origin: 4px 0px;
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/*
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 1600px;
+	height: 1600px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+
+  background: #f91791;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li{
+  padding: 10px 0;
+  font-size: 115px;
+}
+
+#menu li hover{
+  color: #fff;
+}
+/*
+ * And let's fade it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: scale(1.0, 1.0);
+  opacity: 1;
 }
 /*
 .nav {
@@ -200,7 +347,7 @@ a:visited{
 	display: inline-block;
 	text-transform: uppercase;
 	position: relative;
-	z-index: 1;
+	z-index: -1;
 	overflow: hidden;
 	font-size: 18px;
 	text-align: center;
@@ -341,7 +488,7 @@ a:visited{
 	display: inline-block;
 	text-transform: uppercase;
 	position: relative;
-	z-index: 1;
+	/*z-index: 1;*/
 	overflow: hidden;
 	font-size: 18px;
 	text-align: center;
@@ -403,6 +550,7 @@ a:visited{
 	min-height: 100vh;
 	display: flex;
 }
+
 #welcome .text {
 	animation: inherit;
 	margin: auto;
@@ -982,7 +1130,7 @@ body > section > .holder > .title h2:after {
 	left: 0;
 	background: #fff;
 	position: absolute;
-	z-index: 10;
+	z-index: 1;
 }
 
 #about:after {
@@ -997,6 +1145,7 @@ body > section > .holder > .title h2:after {
 	left: 0;
 	background: #000;
 	position: absolute;
+
 }
 
 #about .holder {
@@ -1898,6 +2047,7 @@ circle skills
 	-ms-transform: rotate3d(0,1,0,-180deg);
 	transform: rotate3d(0,1,0,-180deg);
 }*/
+
 
 
 #about .experience .row {
