changed testimonial button to pink

--- a/stylesheets/jquery.bxslider.css
+++ b/stylesheets/jquery.bxslider.css
@@ -31,7 +31,7 @@
 
 .bx-wrapper .bx-viewport {
 	left: -5px;
-	
+
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
 	-moz-transform: translatez(0);
@@ -79,7 +79,7 @@
 }
 
 .bx-wrapper .bx-pager.bx-default-pager a {
-	background: #D5E0DC;
+	background: #fff;
 	text-indent: -9999px;
 	display: block;
 	width: 12px;
@@ -93,7 +93,7 @@
 
 .bx-wrapper .bx-pager.bx-default-pager a:hover,
 .bx-wrapper .bx-pager.bx-default-pager a.active {
-	background: #14B97D;
+	background: #f91791;
 }
 
 /* DIRECTION CONTROLS (NEXT / PREV) */
