--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1509,7 +1509,14 @@ circle skills
 	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 	cursor: default;
 }
-
+.ch-box {
+	width: 100%;
+	height: 100%;
+	/*border-radius: 50%;*/
+	position: relative;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+	cursor: default;
+}
 .ch-info-wrap{
 	position: absolute;
 	width: 180px;
@@ -1795,17 +1802,82 @@ circle skills
 	/*font-family: "Vidaloka", monospace;*/
 
 }
-.logo summit{
-	background: url("summitlogo.jpg")
-}
-.logo geico{
-	background: url("geico-logo.jpg")
-}
-.logo montage{
-	background: url("montage.png")
-}
 
 
+
+
+
+.education .row {
+	margin-top: 150px;
+	padding: 0 0 40px 0;
+	overflow: hidden;
+}
+
+.education .row + .row {
+	border-top: 1px solid #ccc;
+	padding: 40px 0;
+}
+
+.education .row img {
+	width: 220px;
+	height: 225px;
+	margin-left: 100px;
+	margin-right: 100px;
+	display: inline-block;
+	float: left;
+}
+
+.education .row .brief {
+	margin-top: 50px;
+	padding-left: 10px;
+	padding-right: 80px;
+}
+
+.education .row .brief .company-name {
+	font-family: "Abril Fatface", serif;
+	font-size: 24px;
+
+}
+
+.education .row .brief .position {
+	/*font-family: "Audrey-Normal", monospace;*/
+	font-family: "Abril Fatface", serif;
+	color: #f91791;
+	font-style: bold;
+	font-size: 24px;
+	padding: 10px 0 0 0;
+	text-align: center;
+}
+
+.education .row .brief span {
+	display: block;
+	/*font-family: "Vidaloka", monospace;*/
+}
+.education .row .brief li {
+	list-style: circle;
+	margin-left: 150px;
+	margin-right: 175px;
+	line-height: 24px;
+	font-size: 18px;
+	font-family: "Playfair Display", monospace;
+	font-style: bold;
+	/*font-family: "Vidaloka", monospace;*/
+}
+.logo .summit{
+	background: url("summitlogo.jpg");
+}
+.logo .geico{
+	background: url("geico-logo.jpg");
+}
+.logo .montage{
+	background: url("montage.png");
+}
+.logo .umd {
+	background: url("university-of-maryland-logo.png");
+}
+.logo .ga {
+	background: url("1ga_logo.jpg");
+}
 /*education*/
 
 /*testimonials*/
@@ -1818,32 +1890,35 @@ circle skills
 	line-height: 30px;
 	color: #fff;
 }
-/*
-#portfolio  .holder {
+
+#testimonials  .holder {
+	text-align: center;
 	width: 100%;
 	margin: 0 auto;
-	color: #fff;
-	background-color: #000;
+	color: #f91791;
 }
-#portfolio  .testimonial {
+#testimonials  .testimonial {
+	text-align: center;
 	line-height: 34px;
-	color: #fff;
-	background-color: #000;
+	color: #f91791;
+	width: 100%;
 }
-#portfolio  .testimonial .quote {
+#testimonials  .testimonial .quote {
 	font-family: "Playfair Display", monospace;
 	margin:20px 20px 20px 20px;
 	font-size: 24px;
 	padding: 50px 50px 50px 50px;
-	color: #fff;
-	background-color: #000;
+	width: 100%;
+	color: #f91791;
+	text-align: center;
 }
-#portfolio  .testimonial .client-info {
+#testimonials .testimonial .client-info {
 	color: #f91791;
 	font-size: 28px;
-	background-color: #000;
+	width: 100%;
+	text-align: center;
 }
-*/
+
 
 #portfolio {
 	background-color: #000;
@@ -2298,11 +2373,170 @@ margin: 0 auto;
 position: relative;
 }
 
+#resume .ch-grid {
+	margin-top: 30px;
+	margin: 20px 0 0 0;
+	padding: 0;
+	list-style: none;
+	display: block;
+	text-align: center;
+	width: 100%;
+}
+
+#resume .ch-grid:after,
+#resume .ch-item:before {
+	content: '';
+    display: table;
+}
+
+#resume .ch-grid:after {
+	clear: both;
+}
+
+#resume .ch-grid li {
+	width: 220px;
+	height: 220px;
+	display: inline-block;
+	margin: 20px;
+}
+#resume .ch-item {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	position: relative;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+	cursor: default;
+}
+#resume .ch-box {
+	width: 100%;
+	height: 100%;
+	/*border-radius: 50%;*/
+	position: relative;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+	cursor: default;
+}
+#resume .ch-info-wrap{
+	position: absolute;
+	width: 180px;
+	height: 180px;
+	border-radius: 50%;
+	-webkit-perspective: 800px;
+	-moz-perspective: 800px;
+	-o-perspective: 800px;
+	-ms-perspective: 800px;
+	perspective: 800px;
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+	top: 20px;
+	left: 20px;
+	/*background: #f9f9f9 url(../images/1167.png);*/
+	box-shadow:
+	0 0 0 20px rgba(255,255,255,0.2),
+	inset 0 0 3px rgba(115,114, 23, 0.8);
+
+}
+
+
+#resume .ch-info{
+	position: absolute;
+	width: 180px;
+	height: 180px;
+	border-radius: 50%;
+	transition: all 0.4s ease-in-out;
+	transform-style: preserve-3d;
+}
+
+#resume .ch-info > div {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-position: center center;
+	backface-visibility: hidden;
+}
+
+#resume .ch-info .ch-info-back {
+	transform: rotate3d(0,1,0,180deg);
+	background: #000;
+}
+#resume .ch-info{
+	position: absolute;
+	width: 180px;
+	height: 180px;
+	border-radius: 50%;
+
+	-webkit-transition: all 0.4s ease-in-out;
+	-moz-transition: all 0.4s ease-in-out;
+	-o-transition: all 0.4s ease-in-out;
+	-ms-transition: all 0.4s ease-in-out;
+	transition: all 0.4s ease-in-out;
+
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+
+}
+
+
+#resume .ch-info h3 {
+	color: #fff;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-size: 14px;
+	margin: 0 15px;
+	padding: 40px 0 0 0;
+	height: 90px;
+	font-family: 'Open Sans', Arial, sans-serif;
+	text-shadow:
+		0 0 1px #fff,
+		0 1px 2px rgba(0,0,0,0.3);
+}
+
+#resume .ch-info p {
+	color: #fff;
+	padding: 10px 5px;
+	font-style: italic;
+	margin: 0 30px;
+	font-size: 12px;
+	border-top: 1px solid rgba(255,255,255,0.5);
+}
+
+#resume .ch-info p a {
+	display: block;
+	color: rgba(255,255,255,0.7);
+	font-style: normal;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 9px;
+	letter-spacing: 1px;
+	padding-top: 4px;
+	font-family: 'Open Sans', Arial, sans-serif;
+}
+
+#resume .ch-info p a:hover {
+	color: rgba(255,242,34, 0.8);
+}
+
+#resume .ch-item:hover .ch-info-wrap {
+	box-shadow:
+		0 0 0 0 rgba(255,255,255,0.8),
+		inset 0 0 3px rgba(115,114, 23, 0.8);
+}
+
+#resume .ch-item:hover .ch-info {
+	transform: rotate3d(0,1,0,-180deg);
+}
 #resume strong{
 	color: #f91791;
 	font-family: 'Abril Fatface', serif;
 }
-* {
+/*{
 	margin:0;
 	padding:0;
 	border:none;
@@ -2310,10 +2544,44 @@ position: relative;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}*/
+.project {
+	padding: 0;
+  margin: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+}
+.gallery_containers {
+	margin-top: 30px;
+	margin: 20px 0 0 0;
+	padding: 0;
+	/*list-style: none;*/
+	display: block;
+	text-align: center;
+	width: 100%;
 }
 
-.gallery_container {
-	position: relative;
+/*.gallery_container:after,*/
+/*.gallery_containers:before {
+	content: '';
+    display: table;
+}
+
+.gallery_containers:after {
+	clear: both;
+}*/
+
+.gallery_containers li {
+	width: 220px;
+	height: 220px;
+	display: inline-block;
+	margin: 10px;
 }
 .gallery_container {
 	display: inline-block;
@@ -2324,11 +2592,16 @@ position: relative;
 	border: 1px solid #2a2a2a;
 	position: relative;
 }
+
+
+
 .gallery_container img {
+	display: block;
+	/*position: absolute;*/
 	width: 400px;
 	height: 300px;
-
 }
+
 .project_info { /* holds number / description */
 	width: 400px;
 	height: 300px;
@@ -3020,9 +3293,17 @@ span5:hover{
 			float: none;
 		}
 
+		#about .education .row .brief {
+			padding: 15px 0 0 0;
+		}
+		#about .education .row .logo {
+			float: none;
+		}
+
 		#about .experience .row .brief {
 			padding: 15px 0 0 0;
 		}
+
 
 		#about .links a {
 			margin: 0 0 12px 0 !important;
@@ -3035,13 +3316,6 @@ span5:hover{
 			font-size: 20px;
 			margin: 0 10px;
 		}
-
-		/*#about .bg-image {
-		background-size: 150%;
-		background-position: right bottom;
-		}*/
-
-
 
 		#about .tab {
 			float: none;
