fixing font size

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1882,7 +1882,7 @@ circle skills
 
 /*testimonials*/
 #portfolio h4{
-	/*text-align: center;*/
+	text-align: center;
 	margin-top: 45px;
 	margin-bottom: 10px;
 	font-family: 'Abril Fatface', serif;
